# django-eav

./: .gitignore  README.md  manage.py  pyproject.toml
django_eav/: apps.py  asgi.py  pytest.ini  settings.py  urls.py  wsgi.py
django_eav/examples/: search.py
django_eav/migrations/: 0001_initial.py
django_eav/models/: __init__.py  eav_json.py  eav_typed_column.py  general.py
django_eav/services/: elasticsearch.py  entity.py
django_eav/tests/services/: test_elasticsearch.py  test_entity.py
